--- a/docs/src/app/(private)/experiments/popups/popups-in-popups.module.css
+++ b/docs/src/app/(private)/experiments/popups/popups-in-popups.module.css
@@ -319,7 +319,8 @@
 
 .Backdrop {
   background: rgb(0 0 0 / 0.35);
-  position: fixed;
+  position: absolute;
   inset: 0;
   backdrop-filter: blur(4px);
+  min-height: 100dvh;
 }
